/*
 * Copyright (C) 2011 Alastair R. Beresford.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
 package nigori;

option java_package = "com.google.nigori.common";
option java_outer_classname = "NigoriMessages";

message AuthenticateRequest {//TODO(drt24) we need to have the server name in here.
  required bytes public_key = 1;
  required bytes schnorr_s = 2;
  required bytes schnorr_e = 3;
  required bytes nonce = 4;
}

message GetRequest {
  required AuthenticateRequest auth = 1;
  required bytes key = 2;
}

message GetResponse {
  required bytes value = 1;
}

message PutRequest {
  required AuthenticateRequest auth = 1;
  required bytes key = 2;
  required bytes value = 3;  
}

message DeleteRequest {
  required AuthenticateRequest auth = 1;
  required bytes key = 2;
}

//TODO(beresford): Registration may require a valid signature from Nigori store admin
message RegisterRequest {
  required bytes public_key = 1;
  required bytes token = 2;
}
message UnregisterRequest {
  required AuthenticateRequest auth = 1;
}